<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.univaq.disim.sealab</groupId>
	<artifactId>easier</artifactId>
	<version>0.6.3</version>
	<name>EASIER</name>
	<description>A multi-objective optimization framework</description>
	<packaging>pom</packaging>
	<modules>
		<!-- <module>easier-aemilia2text</module> -->
		<module>easier-core</module>
		<module>easier-logicalSpecification/LogicalSpecification</module>
		<module>easier-uml</module>
		<module>easier-epsilon</module>
		<module>easier-uml2lqn</module>
		<module>easier-refactoringLibrary</module>
		<module>easier-uml2lqnCaseStudy</module>
		<module>easier-reliability</module>
		<module>easier-aemiliaMetamodel/metamodel</module>
	</modules>
	<properties>
		<emf.version>2.15.0</emf.version>
		<jdk.version>11</jdk.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<easier.aemiliaMetamodel.version>1.0.0</easier.aemiliaMetamodel.version>
		<easier.core.version>0.6.3</easier.core.version>
		<easier.logicalSpecification.version>0.6</easier.logicalSpecification.version>
		<easier.aemiliaToQnBridge.version>0.0.2</easier.aemiliaToQnBridge.version>
		<easier.measuresToIndices.version>1.0.0</easier.measuresToIndices.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>*.jar</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>it.univaq.disim.sealab.metaheuristic.Launcher</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase-->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>Maven2 Repository</id>
			<name>maven2 repository</name>
			<url>http://central.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>Eclipse Repository</id>
			<name>eclipse repository</name>
			<url>https://repo.eclipse.org/content/groups/releases/</url>
		</repository>
		<repository>
			<id>Sonatype Repository</id>
			<name>sonatype repository</name>
			<url>https://oss.sonatype.org/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>central</id>
			<name>atlassianuseast1-releases</name>
			<url>https://packages.atlassian.com/maven-3rdparty</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>bintray-sealabqualitygroup-maven-repository</id>
			<name>bintray</name>
			<url>https://dl.bintray.com/sealabqualitygroup/maven-repository</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.common -->
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
			<version>${emf.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.ecore -->
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore</artifactId>
			<version>${emf.version}</version>
		</dependency>

		<!-- JUNIT -->
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>1.72</version>
		</dependency>
	</dependencies>
</project>
